# Maquinas-secuenciales

./: AFD.cpp  AFD.h  APila.cpp  APila.h  APilaHandler.cpp  APilaHandler.h  Automata.cpp  Automata.h  CMakeLists.txt  Estado.cpp  Estado.h  MTuring.cpp  MTuring.h  README.md  borrador.txt  ejemplosMain.h  exceptions.txt  funcionesMain.cpp  funcionesMain.h  main.cpp
Data_Structures/: Celda.h  Cinta.h  Node.h  Stack.h
Diagrama_UML/: scratch.puml
test/: CMakeLists.txt
test/MS_Test/: CMakeLists.txt  test.cpp
